--- a/MyTeamProject1/app/src/main/AndroidManifest.xml
+++ b/MyTeamProject1/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ReportActivity"></activity>
+        <activity android:name=".MapSearchActivity"></activity>
+        <activity android:name=".ReportActivity" />
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
@@ -30,8 +31,8 @@
         <activity android:name=".Write" />
         <activity android:name=".Find" />
         <activity android:name=".MapActivity" />
-        <activity android:name=".ReportActivity"/>
-
+        <activity android:name=".ReportActivity" />
+        <activity android:name=".MapSearchActivity" />
     </application>
 
 </manifest>
