--- a/MyTeamProject1/app/build.gradle
+++ b/MyTeamProject1/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'org.jsoup:jsoup:1.11.3'
 
     // 네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.8.0'
