기능 통합 및 mysql 클라우드 등록 , jsp 추가
기능 통합하였습니다.

--- a/MyTeamProject1/app/src/main/AndroidManifest.xml
+++ b/MyTeamProject1/app/src/main/AndroidManifest.xml
@@ -31,7 +31,12 @@
         <activity android:name=".Write" />
         <activity android:name=".Find" />
         <activity android:name=".MapActivity" />
+
         <activity android:name=".ReportActivity" />
+
+        <activity android:name=".Dae_MainActivity" />
+        <activity android:name=".Drawerlayout"></activity>
+        <activity android:name=".WriteActivity"></activity>
 
     </application>
 
